--- a/public/contact.html
+++ b/public/contact.html
@@ -1,4 +1,13 @@
-<h1>Contact Me</h1>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Contact Me</title>
+</head>
+<body>
+  <h1>Contact Me</h1>
 <p>Tel: +972533354279</p>
 <p>Email: giladzemmel1@gmail.com</p>
 <p>Address:</p>
@@ -7,3 +16,5 @@
   Ness Zionna<br />
   Israel <br />
 </p>
+</body>
+</html>
