--- a/public/myhobbies.html
+++ b/public/myhobbies.html
@@ -1,7 +1,19 @@
-<h1>My Hobbies:</h1>
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>My Hobbies:</h1>
 <ol>
     <li>Training in the gym</li>
     <li>Running</li>
     <li>Reading books</li>
     <li>Creating Useful tools in Excel</li>
 </ol>
+</body>
+</html>
