--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
     </p><hr>
     <h2>Awards</h2>
     <p></p><hr>
-<ul><li><a href="/public/myhobbies.html">My Hobbies</a></li>
-    <li><a href="/public/contact.html">Contact ME</a></li>
+<ul><li><a href="./public/myhobbies.html">My Hobbies</a></li>
+    <li><a href="./public/contact.html">Contact ME</a></li>
 </ul>
 <footer>© Gilad Zemmel. All rights reserved</footer>
 </body>
